p2/k3s/app1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: paulbouwer/hello-kubernetes:1
        ports:
          - name: app-one-port
            containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: app-one-svc
spec:
  selector:
    app: app-one
  ports:
  - name: app-one-svc-port
    protocol: TCP
    port: 80
    targetPort : app-one-port
